tests/invalidTest/other/for_start_with_ptr.q
# EXPECT the start variable must not be pointer

def sint64 errorTest(){
    for sint64* arr, arr[0]<1,1
    { }
    return 2
} 